# godot-tts

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TTS.gd  WORKSPACE  appveyor.yml  build.gradle  godot-tts.gdap  godot-tts.gdnlib  godot-tts.gdnlib.release  godot_tts.gdnlib  godot_tts.gdns
.github/workflows/: build.yml  release.yml  rust.yml
android/src/games/lightsout/godot/tts/: TTS.java
libs/: godot-lib.3.2.2.stable.release.aar  godot-lib.3.2.3.stable.release.aar
src/: lib.rs
src/android/games/lightsout/godot/tts/: BUILD
src/main/: AndroidManifest.xml
src/main/java/games/lightsout/godot/tts/: TTS.java
