[package]
name = "godot-tts"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/ndarilek/godot-rust/" }

[target.'cfg(unix)'.dependencies]
speech-dispatcher = "0.3"

[target.'cfg(windows)'.dependencies]
tolk = "0.1"
