[package]
name = "godot-tts"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]

use_tolk = ["tolk", "tts/use_tolk"]

[dependencies]
env_logger = "0.8"
gdnative = "0.9"
tts = ">= 0.11.4"

[target.'cfg(windows)'.dependencies]
tolk = { version = "0.3", optional = true }
