[package]
name = "godot-tts"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
env_logger = "0.10"
gdnative = "0.11"
tts = "0.25"

[target.'cfg(windows)'.dependencies]
tolk = { version = "0.5", optional = true }
